# Oracle-MCP

./: .env.example  .gitignore  LICENSE  README.md  SETUP_COMPLETE.md  pyproject.toml  run_server.py  test_connection.py  usage.md
examples/: README.md  copilot_mcp_config.json  mcp_config.json
src/oracle_mcp/: __init__.py  __main__.py  config.py  oracle_client.py  server.py
